Added rock logic

--- a/DOM/Project/index.html
+++ b/DOM/Project/index.html
@@ -13,20 +13,20 @@
     </div>
     
     <div class="choices">
-        <div class="choice">
+        <div class="choice" id="rock">
             <img src="./images/rock.png" alt="rock">
         </div>
-        <div class="choice">
+        <div class="choice" id="paper">
             <img src="./images/paper.png" alt="paper">
         </div>
-        <div class="choice">
+        <div class="choice" id="scissors">
             <img src="./images/scissors.png" alt="scissors">
         </div>
     </div>
-
     <div>
-        <p>Your Score</p>
+        <h1 id="result">Hello</h1>
     </div>
+
     <script src="app.js"></script>
 </body>
 </html>
