Created some enhancement

--- a/DOM/Project/index.html
+++ b/DOM/Project/index.html
@@ -23,8 +23,9 @@
             <img src="./images/scissors.png" alt="scissors">
         </div>
     </div>
-    <div>
-        <h1 id="result">Hello</h1>
+    
+    <div class="result-class">
+        <h1 id="result"><i>Start Playing</i></h1>
     </div>
 
     <script src="app.js"></script>
